# image_quality_sampler

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  clean.bat  clean.sh  mkdocs.yml  pyproject.toml  setup.py
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: main.yml
hooks/: hook-pyexiv2.py
image_quality_sampler/: __main__.py  base.py  cli.py  config.py  qt.py  watcher.py
image_quality_sampler/GUI/: __init__.py
image_quality_sampler/GUI/dialogs/: batch_selection_dialog.py  configuration_dialog.py  sampling_initialization_dialog.py
image_quality_sampler/GUI/utils/: helpers.py
image_quality_sampler/GUI/views/: central_view.py  image_sampling_view.py  sample_graphic_view.py  sampling_initialization_view.py
image_quality_sampler/GUI/widgets/: table_widgets.py
image_quality_sampler/db/: database_manager.py
image_quality_sampler/reports/: visualize.py
image_quality_sampler/resources/: styles.css
tests/: sampling_test.py  test_base.py  views_test.py
