[tool.poetry]
name = "image_quality_sampler"
version = "0.2.1"
description = ""
authors = ["chmaikos"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pillow = "^10.0.0"
reportlab = "^4.0.4"
watchdog = "^3.0.0"
matplotlib = "^3.7.2"
pyexiv2 = "^2.8.2"
appdirs = "^1.4.4"
python-magic-bin = {version = "^0.4.14", platform = "win32"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.5.2"
flake8 = "^4.0.1"
pyinstaller = "^5.13.0"
pytest-qt = "^4.2.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image_quality_sampler = 'image_quality_sampler.__main__:main'
